--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <h1>  <em>SOUNDS</em> </h1></a>
                   </li>
                   <li>
-                      <a href="clients.html">CLIENTS
+                      <a href="lyricshow.html">LYRICS how
                         <h1> <em></em> </h1></a>
                   </li>
                   <li>
