--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <h1> <em></em> </h1></a>
                   </li>
                   <li>
-                      <a href="contact.html">CONTACT
+                      <a href="lyricskkm.html">LYRICS kkm
                         <h1> <em>or just casually get in touch</em> </h1></a>
                   </li>
               </ul>
