--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
         <div class="container-fluid">
             <div class="col-md-12 text-center">
                 <p> &copy; 2021 | Firestone Media Group</p>
+                                <h1> <A HREF = "sounds.html">Google Search Engine</A> </h1>
+
             </div>
         </div>   
 </footer>
